Changelog for zest.releaser
===========================

3.9 (unreleased)
----------------

- Nothing changed yet.


3.8 (2010-05-28)
----------------

- Also allowing ``CHANGES`` in addition to ``HISTORY.txt`` and ``CHANGES.txt``
  as a history filename.  Keeps several Django packages happy.


3.7 (2010-05-07)
----------------

- Added support for bzr.  Fixes
  https://bugs.launchpad.net/zest.releaser/+bug/490816  [menesis]


3.6 (2010-04-13)
----------------

- A ``version='1.0',`` string inside the ``setup()`` call no longer has
  non-pep8 spaces around the ``=``.  Fixes
  https://bugs.launchpad.net/zest.releaser/+bug/562122  [reinout]

- Got rid of ugly setup.py hack with UltraMagicString that was meant
  to avoid encoding errors when registering this package at pypi but
  which was not working for python2.4 (at least with collective.dist).
  Only ascii is allowed in the long_description if you want to avoid
  problems at one point or another.
  [maurits]


3.5 (2010-02-26)
----------------

- Treat CHANGES.txt and HISTORY.txt the same: the first that is found
  in a directory is chosen for changing, instead of first looking
  everywhere for a HISTORY.txt and then for a CHANGES.txt.
  [maurits]


3.4 (2010-02-02)
----------------

- Always build zip files if using python2.4 [do3cc]

- bugfix: added 'spreaded_internal' property to BaseVersionControl
  objects, so filefind() does not exclude a directory just because
  there is no '.git' folder in it. It still excludes directory where
  there is no '.svn' folder in SVN repositories. [vincent]


3.3 (2009-12-29)
----------------

- Fixed test failures when run on a computer with a new style pypi
  config.  We now always use an old style config when running the
  tests.
  [maurits]

- Fixed the release command for hg 1.1 (e.g. Ubuntu 9.04).
  [maurits]


3.2 (2009-12-22)
----------------

- Replaced commands.getoutput() with a system() function grabbed from buildout